--- a/Vine11/Vine11-Info.plist
+++ b/Vine11/Vine11-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.twitter.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.twitter.vine11</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
